볼링 리펙토링1 (#96)
* 볼링 리펙토링1-변수/메서드명 변경, console 게임에 BowlingGame객체 적용

* 볼링 리펙토링1-Pin/Pins 생성, Status 생성, Pitch/Pitches 삭제

* 볼링 리펙토링1-Status ofInstance 추가

* 볼링 리펙토링1-StatusHistory, Frames  객체 추가

* 볼링 리펙토링1-Status 관련 리펙토링 완료

* 볼링 리펙토링1-Score 관련 리펙토링 완료

* 볼링 리펙토링1-WebApp에서 값을 불러올 수 있도록 메서드명 변경